# stock

./: .env.example  .gitignore  README.md  config.yaml  dashboard.py  portfolio.example.yaml  pyproject.toml  requirements.txt  run.py
.claude/agents/: clean-architecture-coder.md  fundamental-analyst.md  industry-sector-analyst.md  macro-regime-analyst.md  portfolio-risk-manager.md  project-orchestration-manager.md  valuation-quant-analyst.md
src/stockadvisor/: __init__.py  __main__.py  cli.py  config.py
src/stockadvisor/agents/: __init__.py  context.py  engine.py  heuristic.py  llm.py  loader.py  schemas.py
src/stockadvisor/application/: __init__.py  history.py  monitor.py  report.py  service.py
src/stockadvisor/data/: __init__.py  composite_provider.py  factory.py  free_provider.py  kis_provider.py  krx.py  mock_provider.py  provider.py
src/stockadvisor/domain/: __init__.py  models.py  portfolio.py
tests/: test_kis_and_routing.py
