[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockadvisor"
version = "0.1.0"
description = "멀티 에이전트 기반 국내·해외 주식 종목 분석 프로그램"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "yfinance>=0.2.40",
    "finance-datareader>=0.9.50",
    "pandas>=2.2",
]

[project.scripts]
stockadvisor = "stockadvisor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
